deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${JOB_NAME}-${BRANCH}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${JOB_NAME}-${BRANCH}
  template:
    metadata:
      labels:
        app: ${JOB_NAME}-${BRANCH}
    spec:
      containers:
        - name: ${JOB_NAME}-${BRANCH}
          image: repo.d.k8s/${JOB_NAME}-${BRANCH}:${BUILD_NUMBER}
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          ports:
            - containerPort: 80
            - containerPort: 8002
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: ${JOB_NAME}-${BRANCH}
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: ${JOB_NAME}-${BRANCH}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${JOB_NAME}-${BRANCH}
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /${JOB_NAME}-${BRANCH}
            backend:
              serviceName: ${JOB_NAME}-${BRANCH}
              servicePort: http
